@@ -17,5 +17,5 @@ if not exist "%JAVA_PATH%" (
 )
 
 :: Launch the server with the proper path
-"%JAVA_PATH%" -jar changeme.jar
+"%JAVA_PATH%" --enable-native-access=ALL-UNNAMED -jar changeme.jar
 pause
